# tabyn

./: .gitignore  README (1).md  README.md  admin.html  admin_endpoints.py  app.html  kb_vector.py  pyproject.toml  requirements.txt  run_kb.py  tabayyan.py  update_kb.py
collectors/: benchmarks.py  evaluation_set.py  trusted_sources.py
data/trusted_sources/: MANUAL_SOURCES_README.txt  manual_alarabiya.json  manual_was.json  xtweets_was.json
utils/: helpers.py
